hacky fix for labels that are too long on sliders

--- a/visualize/static/visualize/css/multilayer.css
+++ b/visualize/static/visualize/css/multilayer.css
@@ -72,3 +72,7 @@
   /* pause */
   content: "\f04c";
 }
+
+#active.tab-pane.active {
+  overflow-x: hidden;
+}
